fix socials alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1320,7 +1320,7 @@ footer {
 	}
 
 	.top-socials {
-		top: 200px;
+		top: 85px;
 	}
 
 	.card {
